# project-dionysus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  Makefile.common.mk  Makefile.kernbin.mk  Makefile.mk  README.md  gdbinit  grub.cfg  toolchain-x86_64-elf.cmake  xmake.lua
arch/amd64/: CMakeLists.txt  cpu.S
arch/amd64/lock/: arch_spinlock.cc
kern/: CMakeLists.txt  CMakelists.txt  Makefile  README.md  kernel.ld
kern/arch/: CMakeLists.txt
kern/arch/amd64/: CMakeLists.txt
kern/drv/: CMakeLists.txt  CMakelists.txt
kern/drv/acpi/: CMakeLists.txt  CMakelists.txt  acpi.h
kern/drv/ahci/: CMakeLists.txt  ahci.cc  sata.cc
kern/drv/apic/: CMakeLists.txt  CMakelists.txt  apic_registers.cc  apic_trap_handles.cc  cli_sli.cc  error.cc  exception.hpp  exception_handles.cc  ioapic.cc  lapic.cc  msi.cc  pic.cc  spurious.cc  timer.cc  trapentry_asm.S  traps.cc  traps.hpp  x86_exceptions.cc
kern/drv/apic_timer/: timer.cc
kern/drv/cmos/: CMakeLists.txt  rtc.cc
kern/drv/console/: CMakeLists.txt  console.h
kern/drv/debug/: CMakeLists.txt  backtrace.cc  kdebug.cc  kerror.cc  kpanic.cc
kern/drv/lock/: CMakeLists.txt  spinlock.cc  spinlock_lockable.cc
kern/drv/monitor/: CMakeLists.txt  monitor.cc
kern/drv/pci/: CMakeLists.txt  pci.cc  pci_express.cc  pci_legacy.cc
kern/drv/simd/: CMakeLists.txt  sse.cc
kern/fs/: CMakeLists.txt  fs.cc
kern/fs/cache/: CMakeLists.txt  cache.cc
kern/fs/dev/: ATABlockDevice.cc  CMakeLists.txt  ata_devices.cc  dev.cc  devfs_vnode.cc  device.cc
kern/fs/ext2/: CMakeLists.txt  block.cc  ext2.cc  inode.cc  vnode.cc
kern/fs/vfs/: CMakeLists.txt  vfs.cc  vnode.cc
kern/init/: CMakeLists.txt  CMakelists.txt  Makefile  ap_boot.S  boot.S  main.cc  multiboot.cc  ramdisk.cc  xtors.cc
kern/init/include/: ramdisk.hpp
kern/lib/: CMakelists.txt  Makefile
kern/lib/libc/: Makefile  itoa.cc  print.cc  qsort.cc  string.cc
kern/lib/libcxxrt/: CMakelists.txt  Makefile  cxxbase.cc  new.cc
kern/libs/: CMakeLists.txt  CMakelists.txt
kern/libs/basic_io/: CMakeLists.txt  builtin_text_io.cc
kern/libs/cxxrt_support/: CMakeLists.txt  cxx_symbols.cc  operator_delete.cc  operator_new.cc
kern/libs/kbl/: CMakeLists.txt
kern/libs/ktl/: CMakeLists.txt
kern/libs/libc/: CMakelists.txt  ftoa.cc  itoa.cc  print.cc  qsort.cc  string.cc
kern/libs/libcxxrt/: cxxbase.cc  new.cc
kern/libs/libkernel/: CMakeLists.txt  CMakelists.txt
kern/libs/libsupportcxx/: CMakeLists.txt  operators.cc
kern/libs/newlib_support/: CMakeLists.txt  newlib_syscall_port.cc
kern/memory/pmm/: CMakeLists.txt  buddy_pmm.cc  buddy_provider.cc  kmem.cc  pmm.cc  pmm_init.cc  pmm_old.cc
kern/memory/vmm/: CMakeLists.txt  address.cc  address_space.cc  gdt.cc  kmalloc.cc  mm.cc  page_fault.cc  paging.cc  pgdir_cache.cc  vma.cc  vmm.cc  vmm.h
kern/mm/: CMakeLists.txt  Makefile  bootmm.cc  buddy.cc  vm.cc  vm_seg.cc  vm_utils.cc
kern/mm/allocators/: Makefile  bootmm.cc  buddy.cc
kern/mm/mm/: Makefile  kmalloc.cc  pmm.cc  vm.cc  vm_seg.cc  vm_utils.cc  vmm.cc
kern/mm/pmm/: CMakelists.txt  Makefile  buddy_pmm.cc  buddy_pmm.h  kmem.cc  pmm.cc  pmm.h
kern/mm/vm/: Makefile  vm.cc  vm_seg.cc  vm_utils.cc
kern/mm/vmm/: CMakeLists.txt  CMakelists.txt  Makefile  address.cc  cls.cc  gdt.cc  kmalloc.cc  mm.cc  page_fault.cc  paging.cc  pgdir_cache.cc  vma.cc  vmm.cc  vmm.h
kern/object/: CMakeLists.txt  handle.cc  handle_entry.cc  handle_table.cc  kernel_object.cc  object.cc  object_manager.cc
kern/objm/: CMakeLists.txt  object_manager.cc
kern/proc/: CMakeLists.txt  CMakelists.txt  Makefile  proc.cc  proc.h  process.cc  process_dispatcher.cc  scheduler.cc
kern/proc/include/: elf.hpp  load_code.hpp  process.hpp  syscall.h  syscall_handles.hpp
kern/proc/process/: CMakeLists.txt  load_code.cc  process.cc  process_ipc.cc  process_run.S  scheduler.cc
kern/proc/process_manager/: CMakeLists.txt  CMakelists.txt  context_switch.S  elf.cc  load_code.cc  proc.cc  process.cc  process_run.S  scheduler.cc
kern/proc/syscall/: CMakeLists.txt  CMakelists.txt  syscall.cc  syscall.hpp  syscall_body.cc  syscall_entry.S  syscall_entry.cc  syscall_table.cc
kern/proc/thread/: kernel_thread.cc
kern/servers/: CMakeLists.txt
kern/servers/fs/: CMakeLists.txt  fs.cc
kern/servers/monitor/: CMakeLists.txt  monitor.cc
kern/task/: CMakeLists.txt
kern/task/include/: load_code.hpp  process.hpp  syscall.h  syscall_handles.hpp
kern/task/ipc/: CMakeLists.txt  endpoint.cc  ipc.cc
kern/task/job/: CMakeLists.txt  job.cc  job_dispatcher.cc  job_policy.cc
kern/task/process/: CMakeLists.txt  elf.cc  load_code.cc  process.cc  process_dispatcher.cc  process_ipc.cc  process_new.cc  process_run.S  scheduler.cc
kern/task/scheduler/: CMakeLists.txt  fcfs.cc  mlfq.cc  round_rubin.cc  scheduler.cc  scheduler_class.cc
kern/task/thread/: CMakeLists.txt  deadline.cc  ipc_state.cc  scheduler_state.cc  task_state.cc  thread.S  thread.cc  thread_current.cc  thread_dispatcher.cpp  user_stack.cc  wait_queue.cc
kern/user/: CMakeLists.txt
kern/user/syscall/: CMakeLists.txt  syscall.cc  syscall_args.cc  syscall_body.cc  syscall_table.cc
libs/excutable/: CMakeLists.txt  elf.cc
libs/excutable/include/: elf.hpp  elf64_spec.hpp
libs/libuser/: CMakeLists.txt  CMakelists.txt  lib_wrapper.S  libmain.cc  syscall_client.S  syscall_client.cc  uentry.S  uentry_main.cc
libs/libuser/implements/: CMakeLists.txt  console.cc  hello.cc  process.cc
libs/libuser/include/: io.hpp  maths.hpp  process.hpp
libs/libuser/include_private/: syscall_client.hpp
libs/libuser/io/: CMakeLists.txt  write_format.cc
libs/libuser/math/: CMakeLists.txt
libs/libuser/memory/: CMakeLists.txt  c_funcs.cc  cpp_operators.cc  heap.cc  malloc_free.cc
libs/libuser/syscall/: CMakeLists.txt  process.cc
libs/libuser/user-include/: io.hpp  syscall.hpp
libs/server/: CMakeLists.txt  entry.S  entry_main.cc
libs/server/debug/: itoa.cc  (+2 more)
libs/user/: CMakeLists.txt  uentry.S  uentry_main.cc
tools/mkramdisk/: CMakeLists.txt  check.cc  config.cc  copy.cc  create.cc  dependency.cc  main.cc  mkramdisk.py
(+512 files in other folders)
